--- a/site/src/index.css
+++ b/site/src/index.css
@@ -40,8 +40,8 @@ h2 {
   --clr-gray--very-dark: hsl(248, 10%, 30%);
   --clr-black: hsl(0, 0%, 0%);
   --clr-white: hsl(0, 100%, 100%);
-  --fs-display--main: 2rem;
-  --fs-display--subtitle: 1.5rem;
+  --fs-display--main: 2.4rem;
+  --fs-display--subtitle: 1.2rem;
   --fs-h1: 1.2rem;
   --fs-h2: 1rem;
   --fs-xl: 1.6rem;
@@ -73,7 +73,7 @@ html {
   height: 100%;
   scroll-behavior: smooth;
   scrollbar-width: thin;
-  scrollbar-color: var(--clr-black--light) var(--clr-pink);
+  scrollbar-color: var(--clr-gray--very-dark) var(--clr-pink);
 }
 
 html::-webkit-scrollbar {
@@ -81,7 +81,7 @@ html::-webkit-scrollbar {
 }
 
 html::-webkit-scrollbar-track {
-  background: var(--clr-black--light);
+  background: var(--clr-gray--very-dark);
 }
 
 html::-webkit-scrollbar-thumb {
