--- a/site/src/index.scss
+++ b/site/src/index.scss
@@ -39,8 +39,8 @@ h2 {
   --clr-black: hsl(0, 0%, 0%);
   --clr-white: hsl(0, 100%, 100%);
 
-  --fs-display--main: 2rem;
-  --fs-display--subtitle: 1.5rem;
+  --fs-display--main: 2.4rem;
+  --fs-display--subtitle: 1.2rem;
   --fs-h1: 1.2rem;
   --fs-h2: 1rem;
 
@@ -78,14 +78,14 @@ html {
   height: 100%;
   scroll-behavior: smooth;
   scrollbar-width: thin;
-  scrollbar-color: var(--clr-black--light) var(--clr-pink);
+  scrollbar-color: var(--clr-gray--very-dark) var(--clr-pink);
 }
 
 html::-webkit-scrollbar {
   width: 10px;
 }
 html::-webkit-scrollbar-track {
-  background: var(--clr-black--light);
+  background: var(--clr-gray--very-dark);
 }
 html::-webkit-scrollbar-thumb {
   background: var(--clr-pink);
