--- a/site/src/index.css
+++ b/site/src/index.css
@@ -96,5 +96,6 @@ html::-webkit-scrollbar-thumb {
 body {
   font-family: var(--ff-primary);
   height: 100%;
+  overflow-x: hidden;
 }
 /*# sourceMappingURL=index.css.map */
