icons toolbox plugin-functionallity working for flattenAll,flattenSelection,add or delete size,resizeIcon,editMode. added svg for savedPrototypes and buy me a coffee

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -289,6 +289,8 @@ header .header__nav__menu {
     position: unset;
     padding: unset;
     background: transparent;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
     -webkit-transition: unset;
     transition: unset;
   }
