small changes to icons-new svgs,adding to main. changing flex properties in plugin card

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -322,8 +322,17 @@ header .header__nav__menu {
   overflow: hidden;
   padding-top: var(--spacing-md);
   max-width: 340px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+}
+
+.plugin-card > * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
 }
 
 .plugin-card:hover, .plugin-card:focus {
@@ -392,9 +401,6 @@ header .header__nav__menu {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
